plex/bazarr/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bazarr
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 6767
  selector:
    name: bazarr
