plex/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-lan-bazarr
spec:
  ingressClassName: nginx-lan
  rules:
  - host: bazarr.local
    http:
      paths:
      - backend:
          service:
            name: bazarr
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - bazarr.local
